add newTrade dialog view to the trade module, including connection to the backand

--- a/src/app/modules/admin/trade/list/list.component.html
+++ b/src/app/modules/admin/trade/list/list.component.html
@@ -3,6 +3,7 @@
         <button
         class="hidden sm:inline-flex"
         mat-flat-button
+        (click)="openNewTradeDialog()"
         [color]="'primary'">
             <mat-icon
                 class="icon-size-5">add</mat-icon>
