--- a/src/app/modules/admin/trade/list/list.component.html
+++ b/src/app/modules/admin/trade/list/list.component.html
@@ -37,19 +37,19 @@
             </td>
         </ng-container>
 
-        <!-- Created At -->
-        <ng-container matColumnDef="createdAt">
+        <!-- Updated At -->
+        <ng-container matColumnDef="updatedAt">
             <th
                 mat-header-cell
                 mat-sort-header
                 *matHeaderCellDef>
-                Created At
+                Updated At
             </th>
             <td
                 mat-cell
                 *matCellDef="let trade">
                 <span class="pr-6 whitespace-nowrap">
-                    {{trade.createdAt | date:'MMM dd, y'}}
+                    {{trade.updatedAt | date:'MMM dd, y'}}
                 </span>
             </td>
         </ng-container>
