--- a/src/app/modules/admin/finance/finance.component.html
+++ b/src/app/modules/admin/finance/finance.component.html
@@ -266,114 +266,8 @@
             </div>
 
         </div>
-        <mat-tab-group class="mt-10">
-            <mat-tab label="Buy and Hold">
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 flex-row w-full">
-                    <!-- Visitors overview -->
-                    <!-- Conversions -->
-
-                    <!-- Impressions -->
-                    <div class="flex flex-col flex-auto bg-card shadow rounded-xl overflow-hidden">
-                        <div class="flex items-start justify-between m-6 mb-0">
-                            <div class="text-lg font-medium tracking-tight leading-6 truncate">Strategy Performance</div>
-                            <div class="ml-2">
-                                <button
-                                    class="h-6 min-h-6 px-2 rounded-full bg-hover"
-                                    mat-button
-                                    [matMenuTriggerFor]="impressionsMenu">
-                                    <span class="font-medium text-sm text-secondary">30 days</span>
-                                </button>
-                                <mat-menu #impressionsMenu="matMenu">
-                                    <button mat-menu-item>30 days</button>
-                                    <button mat-menu-item>3 months</button>
-                                    <button mat-menu-item>9 months</button>
-                                </mat-menu>
-                            </div>
-                        </div>
-                        <div class="flex flex-col lg:flex-row lg:items-center mx-6 mt-3">
-                            <div class="text-7xl font-bold tracking-tighter leading-tight">{{data1.impressions.amount | number:'1.0-0'}}</div>
-                            <div class="flex lg:flex-col lg:ml-3">
-                                <mat-icon
-                                    class="icon-size-5 text-red-500"
-                                    [svgIcon]="'heroicons_solid:trending-down'"></mat-icon>
-                                <div class="flex items-center ml-1 lg:ml-0 lg:mt-0.5 text-md leading-none whitespace-nowrap text-secondary">
-                                    <span class="font-medium text-red-500">4%</span>
-                                    <span class="ml-1">below target</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="flex flex-col flex-auto h-10">
-                            <apx-chart
-                                class="flex-auto w-full h-10"
-                                [chart]="chartImpressions.chart"
-                                [colors]="chartImpressions.colors"
-                                [series]="chartImpressions.series"
-                                [stroke]="chartImpressions.stroke"
-                                [tooltip]="chartImpressions.tooltip"
-                                [xaxis]="chartImpressions.xaxis"
-                                [yaxis]="chartImpressions.yaxis"></apx-chart>
-                        </div>
-                    </div>
-                    <div class="sm:col-span-1 lg:col-span-3 flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
-                        <fuse-card class="flex flex-col w-full p-8 filter-info ">
-                            <div class="text-lg font-medium tracking-tight leading-6 truncate">Buy and Hold</div>
-                            <div class="flex items-start justify-between mb-0">
-                                <div class="mt-4">
-                                    Here comes description of the strategy  or the content of the comment field.
-                                    <br><br>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                </div>
-                            </div>
-
-                            <hr class="w-full border-t">
-                            <div class="flex flex-col">
-                                <div class="flex items-center">
-                                    <mat-icon
-                                        class="icon-size-5 mr-3"
-                                        [svgIcon]="'heroicons_solid:location-marker'"></mat-icon>
-                                    <span class="leading-none">Seed Capital: 10,000$</span>
-                                </div>
-                                <div class="flex items-center mt-4">
-                                    <mat-icon
-                                        class="icon-size-5 mr-3"
-                                        [svgIcon]="'heroicons_solid:briefcase'"></mat-icon>
-                                    <span class="leading-none">Max risk per strategy: 20% = 2000$</span>
-                                </div>
-                                <div class="flex items-center mt-4">
-                                    <mat-icon
-                                        class="icon-size-5 mr-3"
-                                        [svgIcon]="'heroicons_solid:cake'"></mat-icon>
-                                    <span class="leading-none">Max risk per trade: 2% = 200$</span>
-                                </div>
-                            </div>
-                            <div class="flex flex-col flex-auto w-full items-center">
-                                <button
-                                class="px-6"
-                                mat-flat-button
-                                [color]="'primary'">
-                                Update Strategy
-                                </button>
-                            </div>
-                        </fuse-card>
-                    </div>
-                    <!-- Visits -->
-                </div>
-            </mat-tab>
-            <mat-tab label="Bonus Strategy"></mat-tab>
-            <mat-tab>
-                <ng-template mat-tab-label>
-                    <mat-icon class="example-tab-icon">add</mat-icon>
-                    New
-                </ng-template>
-            </mat-tab>
-        </mat-tab-group>
-
-        <div class="grid grid-cols-1 xl:grid-cols-3 gap-8 w-full mt-8">
-            <!-- Recent transactions table -->
-            <div class="xl:col-span-6 flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
-                <trade-list></trade-list>
-            </div>
-        </div>
+   
+        <app-strategy></app-strategy>
 
     </div>
 
