create new strategy details component; apply DRY to api service

--- a/src/app/modules/admin/finance/finance.component.html
+++ b/src/app/modules/admin/finance/finance.component.html
@@ -17,29 +17,18 @@
                         [svgIcon]="'heroicons_solid:document-report'"></mat-icon>
                     <span class="ml-2">Reports</span>
                 </button> -->
-                <button
-                    class="hidden sm:inline-flex ml-3"
-                    mat-stroked-button>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:cog'"></mat-icon>
+                <button class="hidden sm:inline-flex ml-3" mat-stroked-button>
+                    <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:cog'"></mat-icon>
                     <span class="ml-2">Settings</span>
                 </button>
-                <button
-                    class="hidden sm:inline-flex ml-3"
-                    mat-flat-button
-                    [color]="'primary'">
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:save'"></mat-icon>
+                <button class="hidden sm:inline-flex ml-3" mat-flat-button [color]="'primary'">
+                    <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:save'"></mat-icon>
                     <span class="ml-2">Export</span>
                 </button>
 
                 <!-- Actions menu (visible on xs) -->
                 <div class="sm:hidden">
-                    <button
-                        [matMenuTriggerFor]="actionsMenu"
-                        mat-icon-button>
+                    <button [matMenuTriggerFor]="actionsMenu" mat-icon-button>
                         <mat-icon [svgIcon]="'heroicons_outline:dots-vertical'"></mat-icon>
                     </button>
                     <mat-menu #actionsMenu="matMenu">
@@ -56,8 +45,7 @@
                 <!-- Previous statement -->
                 <div class="relative flex flex-col flex-auto p-6 pr-3 pb-3 bg-card rounded-2xl shadow overflow-hidden">
                     <div class="absolute bottom-0 right-0 w-24 h-24 -m-6">
-                        <mat-icon
-                            class="icon-size-24 opacity-25 text-green-500 dark:text-green-400"
+                        <mat-icon class="icon-size-24 opacity-25 text-green-500 dark:text-green-400"
                             [svgIcon]="'heroicons_outline:check-circle'"></mat-icon>
                     </div>
                     <div class="flex items-center">
@@ -68,52 +56,43 @@
                             </div>
                         </div>
                         <div class="ml-auto -mt-2">
-                            <button
-                                mat-icon-button
-                                [matMenuTriggerFor]="previousStatementMenu">
-                                <mat-icon
-                                    class="icon-size-5"
-                                    [svgIcon]="'heroicons_solid:dots-vertical'"></mat-icon>
+                            <button mat-icon-button [matMenuTriggerFor]="previousStatementMenu">
+                                <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:dots-vertical'"></mat-icon>
                             </button>
                             <mat-menu #previousStatementMenu="matMenu">
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:credit-card'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:credit-card'">
+                                        </mat-icon>
                                         <span>View statement</span>
                                     </span>
                                 </button>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:cash'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:cash'">
+                                        </mat-icon>
                                         <span>Spending breakdown</span>
                                     </span>
                                 </button>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:receipt-tax'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:receipt-tax'">
+                                        </mat-icon>
                                         <span>Tax breakdown</span>
                                     </span>
                                 </button>
                                 <mat-divider class="my-2"></mat-divider>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:printer'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:printer'">
+                                        </mat-icon>
                                         <span>Print statement</span>
                                     </span>
                                 </button>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:mail'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:mail'">
+                                        </mat-icon>
                                         <span>Email statement</span>
                                     </span>
                                 </button>
@@ -127,75 +106,67 @@
                         </div>
                         <div class="flex flex-col mx-6 my-3">
                             <div class="text-sm font-medium leading-none text-secondary">Spent</div>
-                            <div class="mt-2 font-medium text-3xl leading-none">{{data.previousStatement.spent | currency:'USD'}}</div>
+                            <div class="mt-2 font-medium text-3xl leading-none">{{data.previousStatement.spent |
+                                currency:'USD'}}</div>
                         </div>
                         <div class="flex flex-col mx-6 my-3">
                             <div class="text-sm font-medium leading-none text-secondary">Profit</div>
-                            <div class="mt-2 font-medium text-3xl leading-none">{{data.previousStatement.minimum | currency:'USD'}}</div>
+                            <div class="mt-2 font-medium text-3xl leading-none">{{data.previousStatement.minimum |
+                                currency:'USD'}}</div>
                         </div>
                     </div>
                 </div>
                 <!-- Current statement -->
                 <div class="relative flex flex-col flex-auto p-6 pr-3 pb-3 bg-card rounded-2xl shadow overflow-hidden">
                     <div class="absolute bottom-0 right-0 w-24 h-24 -m-6">
-                        <mat-icon
-                            class="icon-size-24 opacity-25 text-red-500 dark:text-red-400"
+                        <mat-icon class="icon-size-24 opacity-25 text-red-500 dark:text-red-400"
                             [svgIcon]="'heroicons_outline:exclamation-circle'"></mat-icon>
                     </div>
                     <div class="flex items-center">
                         <div class="flex flex-col">
                             <div class="text-lg font-medium tracking-tight leading-6 truncate">Last Trade</div>
                             <div class="text-red-600 font-medium text-sm">
-                            {{data.currentStatement.date}}
+                                {{data.currentStatement.date}}
                             </div>
                         </div>
                         <div class="ml-auto -mt-2">
-                            <button
-                                mat-icon-button
-                                [matMenuTriggerFor]="currentStatementMenu">
-                                <mat-icon
-                                    class="icon-size-5"
-                                    [svgIcon]="'heroicons_solid:dots-vertical'"></mat-icon>
+                            <button mat-icon-button [matMenuTriggerFor]="currentStatementMenu">
+                                <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:dots-vertical'"></mat-icon>
                             </button>
                             <mat-menu #currentStatementMenu="matMenu">
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:credit-card'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:credit-card'">
+                                        </mat-icon>
                                         <span>View statement</span>
                                     </span>
                                 </button>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:cash'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:cash'">
+                                        </mat-icon>
                                         <span>Spending breakdown</span>
                                     </span>
                                 </button>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:receipt-tax'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:receipt-tax'">
+                                        </mat-icon>
                                         <span>Tax breakdown</span>
                                     </span>
                                 </button>
                                 <mat-divider class="my-2"></mat-divider>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:printer'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:printer'">
+                                        </mat-icon>
                                         <span>Print statement</span>
                                     </span>
                                 </button>
                                 <button mat-menu-item>
                                     <span class="flex items-center">
-                                        <mat-icon
-                                            class="icon-size-5 mr-3"
-                                            [svgIcon]="'heroicons_solid:mail'"></mat-icon>
+                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:mail'">
+                                        </mat-icon>
                                         <span>Email statement</span>
                                     </span>
                                 </button>
@@ -209,11 +180,13 @@
                         </div>
                         <div class="flex flex-col mx-6 my-3">
                             <div class="text-sm font-medium leading-none text-secondary">Spent</div>
-                            <div class="mt-2 font-medium text-3xl leading-none">{{data.currentStatement.spent | currency:'USD'}}</div>
+                            <div class="mt-2 font-medium text-3xl leading-none">{{data.currentStatement.spent |
+                                currency:'USD'}}</div>
                         </div>
                         <div class="flex flex-col mx-6 my-3">
                             <div class="text-sm font-medium leading-none text-secondary">Loss</div>
-                            <div class="mt-2 font-medium text-3xl leading-none">- {{data.currentStatement.minimum | currency:'USD'}}</div>
+                            <div class="mt-2 font-medium text-3xl leading-none">- {{data.currentStatement.minimum |
+                                currency:'USD'}}</div>
                         </div>
                     </div>
                 </div>
@@ -223,13 +196,12 @@
                 <div class="flex flex-col p-6 pb-4">
                     <div class="flex items-center justify-between">
                         <div class="flex flex-col">
-                            <div class="mr-4 text-lg font-medium tracking-tight leading-6 truncate">Portfolio Performance</div>
+                            <div class="mr-4 text-lg font-medium tracking-tight leading-6 truncate">Portfolio
+                                Performance</div>
                             <div class="text-secondary font-medium">Monthly balance growth and avg. monthly income</div>
                         </div>
                         <div class="ml-2">
-                            <button
-                                class="h-6 min-h-6 px-2 rounded-full bg-hover"
-                                mat-button
+                            <button class="h-6 min-h-6 px-2 rounded-full bg-hover" mat-button
                                 [matMenuTriggerFor]="accountBalanceMenu">
                                 <span class="font-medium text-sm text-secondary">12 months</span>
                             </button>
@@ -243,31 +215,28 @@
                     </div>
                     <div class="flex items-start mt-6 mr-2">
                         <div class="flex flex-col">
-                            <div class="font-semibold text-3xl md:text-5xl tracking-tighter">{{data.accountBalance.growRate}}%</div>
+                            <div class="font-semibold text-3xl md:text-5xl tracking-tighter">
+                                {{data.accountBalance.growRate}}%</div>
                             <div class="font-medium text-sm text-secondary leading-none">$ 12,310.00</div>
                         </div>
                         <div class="flex flex-col ml-8 md:ml-16">
-                            <div class="font-semibold text-3xl md:text-5xl tracking-tighter">{{data.accountBalance.ami | currency:'USD'}}</div>
+                            <div class="font-semibold text-3xl md:text-5xl tracking-tighter">{{data.accountBalance.ami |
+                                currency:'USD'}}</div>
                             <!-- <div class="font-medium text-sm text-secondary leading-none">Average Monthly Income</div> -->
                         </div>
                     </div>
                 </div>
                 <div class="flex flex-col flex-auto">
-                    <apx-chart
-                        class="flex-auto w-full h-full"
-                        [chart]="accountBalanceOptions.chart"
-                        [colors]="accountBalanceOptions.colors"
-                        [fill]="accountBalanceOptions.fill"
-                        [series]="accountBalanceOptions.series"
-                        [stroke]="accountBalanceOptions.stroke"
-                        [tooltip]="accountBalanceOptions.tooltip"
-                        [xaxis]="accountBalanceOptions.xaxis"></apx-chart>
+                    <apx-chart class="flex-auto w-full h-full" [chart]="accountBalanceOptions.chart"
+                        [colors]="accountBalanceOptions.colors" [fill]="accountBalanceOptions.fill"
+                        [series]="accountBalanceOptions.series" [stroke]="accountBalanceOptions.stroke"
+                        [tooltip]="accountBalanceOptions.tooltip" [xaxis]="accountBalanceOptions.xaxis"></apx-chart>
                 </div>
             </div>
 
         </div>
-   
-        <app-strategy></app-strategy>
+
+        <app-strategy class="mt-20"></app-strategy>
 
     </div>
 
