--- a/src/app/modules/admin/trade/list/list.component.html
+++ b/src/app/modules/admin/trade/list/list.component.html
@@ -1,12 +1,7 @@
 <div class="p-6">
     <div style="float: right;">
-        <button
-        class="hidden sm:inline-flex"
-        mat-flat-button
-        (click)="openNewTradeDialog()"
-        [color]="'primary'">
-            <mat-icon
-                class="icon-size-5">add</mat-icon>
+        <button class="hidden sm:inline-flex" mat-flat-button (click)="openNewTradeDialog()" [color]="'primary'">
+            <mat-icon class="icon-size-5">add</mat-icon>
             <span class="ml-2">New</span>
         </button>
     </div>
@@ -14,23 +9,14 @@
     <div class="text-secondary font-medium">1 pending, 4 completed</div>
 </div>
 <div class="overflow-x-auto mx-6">
-    <table mat-table
-        class="w-full bg-transparent"
-        matSort
-        [dataSource]="tradesDataSource"
-        [trackBy]="trackByFn"
+    <table mat-table class="w-full bg-transparent" matSort [dataSource]="tradesDataSource" [trackBy]="trackByFn"
         #recentTransactionsTable>
         <!-- Ticker -->
         <ng-container matColumnDef="ticker">
-            <th
-                mat-header-cell
-                mat-sort-header
-                *matHeaderCellDef>
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>
                 Ticker
             </th>
-            <td
-                mat-cell
-                *matCellDef="let trade">
+            <td mat-cell *matCellDef="let trade">
                 <span class="pr-6 font-medium text-sm text-secondary whitespace-nowrap">
                     {{trade.ticker}}
                 </span>
@@ -39,15 +25,10 @@
 
         <!-- Updated At -->
         <ng-container matColumnDef="updatedAt">
-            <th
-                mat-header-cell
-                mat-sort-header
-                *matHeaderCellDef>
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>
                 Updated At
             </th>
-            <td
-                mat-cell
-                *matCellDef="let trade">
+            <td mat-cell *matCellDef="let trade">
                 <span class="pr-6 whitespace-nowrap">
                     {{trade.updatedAt | date:'MMM dd, y'}}
                 </span>
@@ -56,16 +37,15 @@
 
         <!-- Price -->
         <ng-container matColumnDef="price">
-            <th
-                mat-header-cell
-                mat-sort-header
-                *matHeaderCellDef>
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>
                 Price
             </th>
-            <td
-                mat-cell
-                *matCellDef="let trade">
+            <td mat-cell *matCellDef="let trade">
                 <span class="pr-6 whitespace-nowrap">
+                    {{trade.price | currency:'USD'}}
+                </span>
+                <span class="pr-6 whitespace-nowrap">
+                    <br />
                     {{trade.price | currency:'USD'}}
                 </span>
             </td>
@@ -73,32 +53,35 @@
 
         <!-- Amount -->
         <ng-container matColumnDef="amount">
-            <th
-                mat-header-cell
-                mat-sort-header
-                *matHeaderCellDef>
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>
                 Amount
             </th>
-            <td
-                mat-cell
-                *matCellDef="let trade">
+            <td mat-cell *matCellDef="let trade">
                 <span class="pr-6 font-medium whitespace-nowrap">
                     {{trade.amount}}
                 </span>
             </td>
         </ng-container>
 
+        <!-- P&L -->
+        <ng-container matColumnDef="pnl">
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>
+                P&L
+            </th>
+            <td mat-cell *matCellDef="let trade">
+                <span class="pr-6 font-medium whitespace-nowrap"
+                    [ngClass]="{'text-green-600': trade.pnl > 0, 'text-red-600': trade.pnl < 0 }">
+                    {{trade.pnl | number: '1.2-2'}}
+                </span>
+            </td>
+        </ng-container>
+
         <!-- Status -->
         <ng-container matColumnDef="status">
-            <th
-                mat-header-cell
-                mat-sort-header
-                *matHeaderCellDef>
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>
                 Status
             </th>
-            <td
-                mat-cell
-                *matCellDef="let trade">
+            <td mat-cell *matCellDef="let trade">
                 <span
                     class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase"
                     [ngClass]="{'bg-red-200 text-red-800 dark:bg-red-600 dark:text-red-50': trade.status === 'pending',
@@ -110,25 +93,13 @@
 
         <!-- Footer -->
         <ng-container matColumnDef="recentOrdersTableFooter">
-            <td
-                class="py-6 px-0 border-0"
-                mat-footer-cell
-                *matFooterCellDef
-                colspan="6">
+            <td class="py-6 px-0 border-0" mat-footer-cell *matFooterCellDef colspan="6">
                 <button mat-stroked-button>See all trades</button>
             </td>
         </ng-container>
 
-        <tr
-            mat-header-row
-            *matHeaderRowDef="tradesTableColumns"></tr>
-        <tr
-            class="order-row h-16"
-            mat-row
-            *matRowDef="let row; columns: tradesTableColumns;"></tr>
-        <tr
-            class="h-16 border-0"
-            mat-footer-row
-            *matFooterRowDef="['recentOrdersTableFooter']"></tr>
+        <tr mat-header-row *matHeaderRowDef="tradesTableColumns"></tr>
+        <tr class="order-row h-16" mat-row *matRowDef="let row; columns: tradesTableColumns;"></tr>
+        <tr class="h-16 border-0" mat-footer-row *matFooterRowDef="['recentOrdersTableFooter']"></tr>
     </table>
 </div>
