--- a/src/app/modules/admin/finance/finance.component.html
+++ b/src/app/modules/admin/finance/finance.component.html
@@ -117,79 +117,7 @@
                     </div>
                 </div>
                 <!-- Current statement -->
-                <div class="relative flex flex-col flex-auto p-6 pr-3 pb-3 bg-card rounded-2xl shadow overflow-hidden">
-                    <div class="absolute bottom-0 right-0 w-24 h-24 -m-6">
-                        <mat-icon class="icon-size-24 opacity-25 text-red-500 dark:text-red-400"
-                            [svgIcon]="'heroicons_outline:exclamation-circle'"></mat-icon>
-                    </div>
-                    <div class="flex items-center">
-                        <div class="flex flex-col">
-                            <div class="text-lg font-medium tracking-tight leading-6 truncate">Last Trade</div>
-                            <div class="text-red-600 font-medium text-sm">
-                                {{data.currentStatement.date}}
-                            </div>
-                        </div>
-                        <div class="ml-auto -mt-2">
-                            <button mat-icon-button [matMenuTriggerFor]="currentStatementMenu">
-                                <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:dots-vertical'"></mat-icon>
-                            </button>
-                            <mat-menu #currentStatementMenu="matMenu">
-                                <button mat-menu-item>
-                                    <span class="flex items-center">
-                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:credit-card'">
-                                        </mat-icon>
-                                        <span>View statement</span>
-                                    </span>
-                                </button>
-                                <button mat-menu-item>
-                                    <span class="flex items-center">
-                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:cash'">
-                                        </mat-icon>
-                                        <span>Spending breakdown</span>
-                                    </span>
-                                </button>
-                                <button mat-menu-item>
-                                    <span class="flex items-center">
-                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:receipt-tax'">
-                                        </mat-icon>
-                                        <span>Tax breakdown</span>
-                                    </span>
-                                </button>
-                                <mat-divider class="my-2"></mat-divider>
-                                <button mat-menu-item>
-                                    <span class="flex items-center">
-                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:printer'">
-                                        </mat-icon>
-                                        <span>Print statement</span>
-                                    </span>
-                                </button>
-                                <button mat-menu-item>
-                                    <span class="flex items-center">
-                                        <mat-icon class="icon-size-5 mr-3" [svgIcon]="'heroicons_solid:mail'">
-                                        </mat-icon>
-                                        <span>Email statement</span>
-                                    </span>
-                                </button>
-                            </mat-menu>
-                        </div>
-                    </div>
-                    <div class="flex flex-row flex-wrap mt-4 -mx-6">
-                        <div class="flex flex-col mx-6 my-3">
-                            <div class="text-sm font-medium leading-none text-secondary">Ticker</div>
-                            <div class="mt-2 font-medium text-3xl leading-none">TSLA</div>
-                        </div>
-                        <div class="flex flex-col mx-6 my-3">
-                            <div class="text-sm font-medium leading-none text-secondary">Spent</div>
-                            <div class="mt-2 font-medium text-3xl leading-none">{{data.currentStatement.spent |
-                                currency:'USD'}}</div>
-                        </div>
-                        <div class="flex flex-col mx-6 my-3">
-                            <div class="text-sm font-medium leading-none text-secondary">Loss</div>
-                            <div class="mt-2 font-medium text-3xl leading-none">- {{data.currentStatement.minimum |
-                                currency:'USD'}}</div>
-                        </div>
-                    </div>
-                </div>
+                <trade-card></trade-card>
             </div>
             <!-- Account balance -->
             <div class="flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
