--- a/src/app/modules/admin/trade/card/card.component.html
+++ b/src/app/modules/admin/trade/card/card.component.html
@@ -60,9 +60,8 @@
             <div class="mt-2 font-medium text-3xl leading-none">{{trade.ticker}}</div>
         </div>
         <div class="flex flex-col mx-6 my-3">
-            <div class="text-sm font-medium leading-none text-secondary">Spent</div>
-            <div class="mt-2 font-medium text-3xl leading-none">{{trade.price * trade.amount + trade.cost |
-                currency:'USD'}}</div>
+            <div class="text-sm font-medium leading-none text-secondary">Development</div>
+            <div class="mt-2 font-medium text-3xl leading-none">{{calculateRelativeDevelopment(trade)}}%</div>
         </div>
         <div class="flex flex-col mx-6 my-3">
             <div class="text-sm font-medium leading-none text-secondary">Loss</div>
