--- a/src/app/modules/admin/finance/finance.component.html
+++ b/src/app/modules/admin/finance/finance.component.html
@@ -43,7 +43,7 @@
         <div class="grid grid-cols-1 xl:grid-cols-2 gap-8 w-full mt-8">
             <div class="grid gap-8 sm:grid-flow-col xl:grid-flow-row">
                 <!-- Previous statement -->
-                <div class="relative flex flex-col flex-auto p-6 pr-3 pb-3 bg-card rounded-2xl shadow overflow-hidden">
+                <!-- <div class="relative flex flex-col flex-auto p-6 pr-3 pb-3 bg-card rounded-2xl shadow overflow-hidden">
                     <div class="absolute bottom-0 right-0 w-24 h-24 -m-6">
                         <mat-icon class="icon-size-24 opacity-25 text-green-500 dark:text-green-400"
                             [svgIcon]="'heroicons_outline:check-circle'"></mat-icon>
@@ -115,9 +115,10 @@
                                 currency:'USD'}}</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Current statement -->
-                <trade-card></trade-card>
+                <trade-card [title]="'Best Trade'" [type]="1"></trade-card>
+                <trade-card [title]="'Last Trade'" [type]="0"></trade-card>
             </div>
             <!-- Account balance -->
             <div class="flex flex-col flex-auto bg-card shadow rounded-2xl overflow-hidden">
