--- a/src/app/modules/admin/trade/card/card.component.html
+++ b/src/app/modules/admin/trade/card/card.component.html
@@ -1,12 +1,14 @@
 <div class="relative flex flex-col flex-auto p-6 pr-3 pb-3 bg-card rounded-2xl shadow overflow-hidden" *ngIf="trade">
     <div class="absolute bottom-0 right-0 w-24 h-24 -m-6">
-        <mat-icon class="icon-size-24 opacity-25 text-red-500 dark:text-red-400"
+        <mat-icon *ngIf="isProfitable()" class="icon-size-24 opacity-25 text-green-500 dark:text-green-400"
+            [svgIcon]="'heroicons_outline:check-circle'"></mat-icon>
+        <mat-icon *ngIf="!isProfitable()" class="icon-size-24 opacity-25 text-red-500 dark:text-red-400"
             [svgIcon]="'heroicons_outline:exclamation-circle'"></mat-icon>
     </div>
     <div class="flex items-center">
         <div class="flex flex-col">
-            <div class="text-lg font-medium tracking-tight leading-6 truncate">Last Trade</div>
-            <div class="text-red-600 font-medium text-sm">
+            <div class="text-lg font-medium tracking-tight leading-6 truncate">{{title}}</div>
+            <div class="font-medium text-sm" [ngClass]="isProfitable() ? 'text-green-600': 'text-red-600'">
                 {{trade.createdAt | date}}
             </div>
         </div>
@@ -64,7 +66,7 @@
             <div class="mt-2 font-medium text-3xl leading-none">{{calculateRelativeDevelopment(trade)}}%</div>
         </div>
         <div class="flex flex-col mx-6 my-3">
-            <div class="text-sm font-medium leading-none text-secondary">Loss</div>
+            <div class="text-sm font-medium leading-none text-secondary">{{isProfitable() ? 'Profit' : 'Loss'}}</div>
             <div class="mt-2 font-medium text-3xl leading-none">{{trade.pnl |
                 currency:'USD'}}</div>
         </div>
