--- a/src/app/modules/admin/portfolio/portfolio.component.html
+++ b/src/app/modules/admin/portfolio/portfolio.component.html
@@ -27,8 +27,10 @@
                 <div class="font-medium text-sm text-secondary leading-none">$ 12,310.00</div>
             </div>
             <div class="flex flex-col ml-8 md:ml-16">
-                <div class="font-semibold text-3xl md:text-5xl tracking-tighter">{{12 |
-                    currency:'USD'}}</div>
+                <div class="font-semibold text-3xl md:text-5xl tracking-tighter"><span class="cursor-pointer"
+                        (click)="openNewTradeDialog()">{{12
+                        |
+                        currency:'USD'}}</span></div>
                 <!-- <div class="font-medium text-sm text-secondary leading-none">Average Monthly Income</div> -->
             </div>
         </div>
