--- a/src/app/modules/admin/portfolio/details/details.component.html
+++ b/src/app/modules/admin/portfolio/details/details.component.html
@@ -6,18 +6,54 @@
             <mat-icon class="text-current" [svgIcon]="'heroicons_outline:x'"></mat-icon>
         </button>
     </div>
-    <div class="flex flex-col flex-auto p-6 sm:p-8 overflow-y-auto">
-        <perfect-scrollbar class="scroll" [config]="{suppressScrollX: true, wheelPropagation: false}">
+    <!-- <h1>Current value: {{portfolio.amount | currency: 'USD'}}</h1> -->
+    <div class="flex flex-col flex-auto p-6 sm:p-8">
+
+
+        <!-- <form class="flex flex-col flex-auto p-6 sm:p-8 overflow-y-auto" [formGroup]="transactionForm"> -->
+        <form class="flex" [formGroup]="transactionForm">
+            <div class="flex items-center w-2/6 mt-6 mr-10 grid">
+                <h1 class="display-4 color-theme-1 mb-1 value">
+                    {{portfolio.amount | currency:'USD':'symbol':'0.0-0'}}
+                </h1>
+                <p class="mb-0 label text-small">Current value</p>
+            </div>
+            <div class="flex items-center w-full mt-6 grid grid-cols-2 md:grid-cols-3 gap-4">
+                <mat-form-field class="flex-auto">
+                    <mat-label>Amount</mat-label>
+                    <input formControlName="amount" matInput type="number" [placeholder]="1000" />
+                    <span matPrefix>$</span>
+                </mat-form-field>
+
+                <mat-form-field class="flex-auto" formControlName="date">
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="picker1" formControlName="date">
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1></mat-datepicker>
+                </mat-form-field>
+                <div class="flex items-center gap-4">
+                    <button type="submit" mat-raised-button mat-dialog-close [disabled]="!transactionForm.valid"
+                        (click)="onSubmit('WITHDRAW')">Withdraw</button>
+                    <button type="submit" mat-raised-button mat-dialog-close [disabled]="!transactionForm.valid"
+                        (click)="onSubmit('DEPOSIT')">Deposit</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+    <div class="flex flex-auto justify-center p-6 sm:p-8 overflow-y-auto">
+        <perfect-scrollbar class="scroll max-w-md" [config]="{suppressScrollX: true, wheelPropagation: false}">
             <table class="table table-sm table-borderless">
                 <tbody>
-                    <tr *ngFor="let transaction of portfolio.transactions">
+                    <tr *ngFor="let transaction of portfolio.transactions" class="cursor-pointer" #tooltip="matTooltip"
+                        matTooltip="{{transaction.transactionType}}" matTooltipPosition="before">
                         <td>
                             <span class="transaction-indicator align-middle"
                                 [ngClass]="isProfitable(transaction) ? 'border-green-600': 'border-red-600'"></span>
                         </td>
                         <td class="text-right">
-                            <span class="font-weight-medium"
-                                tooltip="{transaction.transactionType}">{{transaction.amount | currency:'USD'}}</span>
+                            <span class="font-weight-medium">{{transaction.amount | currency:'USD'}}</span>
                         </td>
                         <td class="text-right"><span class="text-muted">{{transaction.date | date:'mediumDate'}}</span>
                         </td>
